# manga-reader

./: .gitignore  LICENSE  README.md  build.bat  create_icon.py  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/libs/: libarchive-android.aar
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_reader.cpp  libzip_wrapper.cpp  libzip_wrapper.h  mobi_handler.cpp  mobi_handler.h  native_engine.cpp  native_engine.h  native_reader.cpp  native_reader.h  pdfium_wrapper.cpp  pdfium_wrapper.h  renderer.c
app/src/main/java/com/mangareader/: App.kt  CrashHandler.kt  MainActivity.kt  Scanner.kt  SignatureVerifier.kt
app/src/main/java/com/mangareader/data/: ConfigManager.kt  Database.kt  ReaderConfig.kt  SearchHistory.kt
app/src/main/java/com/mangareader/native/: BitmapPool.kt  NativeEngine.kt  NativeReader.kt  NativeReaderScreen.kt  NativeReaderView.kt  NativeRenderer.kt  NativeRendererView.kt  PagerReaderView.kt  PagerSSIV.kt  ViewerNavigation.kt  WebtoonReaderView.kt
app/src/main/java/com/mangareader/ui/: ChapterNavigator.kt  Library.kt  Reader.kt  ReaderAutoScroll.kt  ReaderBottomBar.kt  ReaderChapterTransition.kt  ReaderContentOverlay.kt  ReaderItemGrid.kt  ReaderNavigationOverlay.kt  ReaderSettingsDialog.kt  ReaderSettingsSheet.kt  ReaderSystemBars.kt  ReaderTocSheet.kt  ReaderToolbarAnimation.kt  Theme.kt  (+3 more)
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/values/: ids.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
(+20 files in other folders)
